# Lock-In-

./: .gitignore  advice.md  player-perps-market-a-solana-build-spec.md  player-perps-ui-mockup.html  player-perps-ui-spec.md  proximity-markets-simulator-trepa.html
app/: Anchor.toml  Cargo.toml  README.md
app/docs/: DEMO-SCRIPT.md  LEADERBOARD-PLAN.md  PROOF.md  TECH-OVERVIEW.md
app/engine/: Cargo.toml
app/engine/src/: distance.rs  lib.rs  settle.rs
app/engine/tests/: worked_example.rs
app/keeper/: package.json
app/keeper/e2e/: LISTING-AGENT-PLAN.md  README.md  claim-payouts.ts  gen-pp-idl.mjs  healthcheck.mjs  lister.ts  monitor-e2e-setup.ts  monitor.ts  player_perps.idl.json  pp-e2e.ts  probe-browser-stake.ts  probe-validate.ts  setup-ui-fixture.ts  verify-onchain.ts
app/keeper/src/: demo.ts  engine.ts  settle-keeper.ts  txline.ts
app/programs/player_perps/: Cargo.toml
app/programs/player_perps/idls/: txoracle.json
app/programs/player_perps/src/: errors.rs  lib.rs  state.rs
app/programs/player_perps/src/instructions/: fast_path.rs  lifecycle.rs  mod.rs  pipeline.rs
app/ui/: app.html  config.js  docs.html  fixtures.json  index.html  match.html  proof-ixs.json  proof-sample.json  style.css
skill files/: player-perps-multichain-plan.md  player-perps-trepa-model-extensions.md  player-perps-trepa-payout-model.md  proximity-markets-simulator.html  proximity-markets-spec (2).md  trepa-payout-model-deep-dive.md
