[package]
name = "player_perps"
version = "0.1.0"
description = "Player Perps — Market A (full-time score proximity) escrow + settlement on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "player_perps"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# Inject a final score locally without the TxLine CPI (tests/localnet only).
dev-validate = []
# Target TxLine's mainnet txoracle program id instead of the default devnet one.
mainnet = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
# The chain-agnostic math — one source of truth, shared with the keeper.
engine = { path = "../../engine" }
